# video_poc

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py
app/api/: __init__.py  main.py
app/db/: __init__.py  mongo.py
app/graph/: __init__.py  builder.py  context_prefs.py  nodes.py  progress.py  state.py
app/llm/: __init__.py  gemini.py  json_utils.py  wavespeed_client.py
app/models/: __init__.py  schemas.py  vector_table.py
app/rag/: __init__.py  chroma_narrative.py  embeddings.py
app/storage/: __init__.py  s3_images.py
scripts/: inspect_chroma_scratch.py  rag_one_video_dna_full.py  test_gemini_response_parse.py  test_image_gen.py  test_mongo_persist.py
static/: app.js  index.html  style.css
